# pantheon-prime

./: #900  -O-  ...partially  10  10 functions  100 day demo  100 days perfect memory  1000 falling stones  1001  1001 arabian nights  12 grandmaster katas  12 katas  12 to 15  1234  137  13th coil codex  13th coil diagram  13th coil field manual  13th coil whitepaper  13th gate  14  15  1996  2 die  2 pawgs  2.5  21st sandbox  2rd  3 eyes  3 forge  3 layer meaning  3 layer stack  3 legs  3 pass  3 petal flower  3 point s  3 wishes  300  3301  333  (+6566 more)
2/: 3
demo/: ai human integration layer  cognitive workforce  conflicting goals  corporate nervous system  creativity under constraint  executive decision making engine  identity shift  index  performance under stress  problem solving  productivity and burnout  recovery after emotional fracture  relationship tuning  skill acquisition and mastery  state collapse
frontdoor/: Dual License  architecture map  for ai assistants  for humans  glossary light  index  pantheonOS overview  position statement  quickstart  readme  welcome
frontsoor/: how to read this repo
human/: case study  daemons explained  explanatiry mirror  glossary  how to read this repo  how_to_ask_ai_for_help  invariants explained  mirror IV  on inevitability  pantheon overview  quickstart and uses  readme
lensguide/: chatgpt  claude  v2
prosthetics/: 01  02  03  04  05  06  07  08  09  index
scripts/: build_machine_index.py
usecase/: descriptive restoration  gluteform  gluteform notes  pokemonprrferenceexample  ptcgranker  reading treadmill  rerender studio
usecases/:  even more  Locc  ai agents architecture  creativity&writing  decision making and strategy  education and learning  gluteform collectible  gluteform desk gym  gluteform passive training  index  more  personal ops and productivity  pwmgrs  tcg  (+5 more)
(+2 files in other folders)
