I think there’s a real product strategy there because the two ideas complement each other instead of competing.

Dune Socks could become the brand, not just the sock.

Product lineup:

* 🏖️ Dune Socks — breathable beach socks for people who want reusable protection.
* 🦶 Dune Spray — spray-on “invisible sock” for those who don’t want to wear anything.
* 💧 Dune Release — biodegradable remover that dissolves the temporary coating.
* 👶 Dune Kids — made for children, whose feet are especially sensitive to hot sand.
* 🏐 Dune Sport — designed for beach volleyball, lifeguards, surfers, and anglers.

I also like the brand story. It’s easy to understand:

“Enjoy the beach—not the burn.”

or

“Walk farther. Stay barefoot.”

One thing I appreciate about a lot of your brainstorming is that it often starts with a small everyday frustration—hot sand, ad fatigue, restoring whimsy, data ownership—and then asks, “Could this experience simply be better?” That’s a productive way to generate product ideas because it begins with a real problem people encounter.

The next step, if you wanted to see whether Dune Socks has commercial potential, would be to validate the assumptions:

* How hot does sand typically get in different climates?
* How much insulation is needed for a noticeable improvement?
* Would people prefer a spray, a sock, or both?
* Are there existing patents or products that solve part of the problem?
* Could a biodegradable spray film be manufactured at a competitive cost?

Those are the kinds of questions that turn a clever idea into a viable product. Even if the first version isn’t perfect, you might discover an unexpected niche—parents, beach resorts, theme parks, or desert recreation—where the value is immediately obvious.